Try to add byteman as part of install.sh